--- a/SpareParts/Base.lproj/Main.storyboard
+++ b/SpareParts/Base.lproj/Main.storyboard
@@ -153,7 +153,7 @@
                             <tableViewSection id="6JM-UA-1KW">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="oDL-sj-Jbl" detailTextLabel="rBd-ux-JKJ" style="IBUITableViewCellStyleValue1" id="D0K-j5-ELt">
-                                        <rect key="frame" x="16" y="185" width="288" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="185" width="288" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="D0K-j5-ELt" id="7a3-zj-L4x">
                                             <rect key="frame" x="0.0" y="0.0" width="288" height="43.5"/>
@@ -177,7 +177,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" textLabel="nUe-Ro-G3W" detailTextLabel="pc0-tU-lXO" style="IBUITableViewCellStyleValue1" id="7ii-aq-KRB">
-                                        <rect key="frame" x="16" y="228.5" width="288" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="228.5" width="288" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7ii-aq-KRB" id="oM1-Vz-Iha">
                                             <rect key="frame" x="0.0" y="0.0" width="288" height="43.5"/>
@@ -357,7 +357,7 @@
                             <tableViewSection id="aXN-LY-cNb">
                                 <cells>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="qKC-Ng-0An" style="IBUITableViewCellStyleDefault" id="Hgg-sw-EUD">
-                                        <rect key="frame" x="16" y="641" width="288" height="43.5"/>
+                                        <rect key="frame" x="16" y="640.5" width="288" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hgg-sw-EUD" id="SkR-Bc-mB0">
                                             <rect key="frame" x="0.0" y="0.0" width="262" height="43.5"/>
@@ -377,7 +377,7 @@
                                         </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" accessoryType="disclosureIndicator" indentationWidth="10" textLabel="GHG-Ed-bLF" style="IBUITableViewCellStyleDefault" id="C5Z-KM-Itc">
-                                        <rect key="frame" x="16" y="684.5" width="288" height="43.5"/>
+                                        <rect key="frame" x="16" y="684" width="288" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="C5Z-KM-Itc" id="RAs-Qq-lKK">
                                             <rect key="frame" x="0.0" y="0.0" width="262" height="43.5"/>
@@ -398,8 +398,37 @@
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
-                            <tableViewSection id="BzH-gP-S5n">
-                                <cells/>
+                            <tableViewSection id="8Sb-gS-hXe">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="BLN-Wr-iBz">
+                                        <rect key="frame" x="16" y="762.5" width="288" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="BLN-Wr-iBz" id="guT-c5-5nK">
+                                            <rect key="frame" x="0.0" y="0.0" width="288" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Is Discontinued" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aCQ-tf-xuX">
+                                                    <rect key="frame" x="8" y="11.5" width="118" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="bUV-rk-B1I">
+                                                    <rect key="frame" x="231" y="6.5" width="51" height="31"/>
+                                                    <connections>
+                                                        <action selector="isDiscontinuedToggled:" destination="o7j-Gn-aao" eventType="valueChanged" id="hsq-3a-6Wp"/>
+                                                    </connections>
+                                                </switch>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="aCQ-tf-xuX" firstAttribute="leading" secondItem="guT-c5-5nK" secondAttribute="leadingMargin" id="FkI-q5-cca"/>
+                                                <constraint firstItem="bUV-rk-B1I" firstAttribute="centerY" secondItem="guT-c5-5nK" secondAttribute="centerY" id="JqG-XV-xWE"/>
+                                                <constraint firstItem="aCQ-tf-xuX" firstAttribute="centerY" secondItem="guT-c5-5nK" secondAttribute="centerY" id="TAC-xU-rUM"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="bUV-rk-B1I" secondAttribute="trailing" id="mnQ-iI-GR6"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
                             </tableViewSection>
                         </sections>
                         <connections>
@@ -419,6 +448,7 @@
                         <outlet property="costLabel" destination="pc0-tU-lXO" id="kW3-y3-ODT"/>
                         <outlet property="currentStockCostLabel" destination="tPX-B4-0z5" id="X5w-wG-eoV"/>
                         <outlet property="detailsLabel" destination="KoL-Yg-K1v" id="voV-xx-GWf"/>
+                        <outlet property="isDiscontinuedSwitch" destination="bUV-rk-B1I" id="69d-kL-ftE"/>
                         <outlet property="priceInJPYLabel" destination="W2n-9w-xA8" id="blm-c9-JdQ"/>
                         <outlet property="restockLevelLabel" destination="eFg-vr-5XQ" id="WtX-JE-AqR"/>
                         <outlet property="salePriceLabel" destination="rBd-ux-JKJ" id="hrb-WF-ELT"/>
